tests/toylang/neg/001026_mutation.toylang
program a = { if a then sleep else program a = { } . sleep; } .
